updated api yaml file and added RESTFul api test cases
